[package]
name = "kf-protocol-core"
edition = "2018"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "endoder and decoder for Kafka protocol"
repository = "https://github.com/infinyon/fluvio"
readme = "README.md"
license = "Apache-2.0"
categories = ["kafka"]


[dependencies]
bytes = "0.5.3"
log = "0.4.8"
num-traits = "0.2.6"
num-derive = "0.2.4"
serde = { version ="1.0.103", features = ['derive'] }